# insomnia

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  go.mod  insomnia.go  main  main.go  shell.nix  wrapper.h
.cargo/: config.toml
pkg/arch/: PKGBUILD
pkg/brew/: insomnia.rb
pkg/debian/DEBIAN/: control
pkg/msi/: insomnia.wxs
pkg/nix/: default.nix
src/: main.rs
src/platform/: linux.rs  macos.c  macos.rs  mod.rs  windows.rs
