[package]
name = "insomnia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"
[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.7"
libc = "0.2.158"

[build-dependencies]
cc = "1.1.15"
