[package]
name = "insomnia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
libc = "0.2.158"
winapi = "0.3.9"
bindgen = "0.61"
core-foundation-sys = "0.8"

[build-dependencies]
bindgen = "0.61"
